2011-05-13 In Cite Solution  <technique@in-cite.net>

	* initial code generated with kickstarter