@@ -1,3 +1,7 @@
+2012-03-20 Tsi YANG  <tsi@in-cite.net>
+	* Feature: Added picto field
+	* Fix: Mistakes in css class name
+
 2011-05-13 In Cite Solution  <technique@in-cite.net>
 
 	* initial code generated with kickstarter
